Updated how Java 21 is set in various places